Fixed potential issue of text spilling over box

--- a/app/static/css/manager.css
+++ b/app/static/css/manager.css
@@ -261,7 +261,7 @@ overflow-x: hidden;
   flex-direction: column;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   padding: 3%;
-  min-height: 200px;
+  min-height: 240px;
   display: flex; 
   flex-direction: column;
   justify-content: center;
